@@ -61,7 +61,7 @@
 #include "dm-Null.h"
 #include "dm/dm_xvars.h"
 #include "dm_private.h"
-#include "solid.h"
+#include "rt/solid.h"
 
 #define PLOTBOUND 1000.0	/* Max magnification in Rot matrix */
 
